fix firefox issue with spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -59,10 +59,6 @@ p {
     font-size: 1em;
 }
 
-br {
-    height: 1.2em;
-}
-
 .heading {
     text-align: center;
     font-size: 2.5em;
@@ -371,6 +367,7 @@ i {
 
 #contact-form p {
     margin: 0 20px;
+    margin-bottom: 40px;
 }
 
 #contact-form p {
@@ -513,6 +510,7 @@ label {
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 30px;
 }
 
 #success div h2 {
@@ -555,6 +553,7 @@ label {
 
 #resources-gcse h2, #resources-alevel h2 {
     text-align: center;
+    margin-top: 30px;
 }
 
 #resources-gcse div p, #resources-alevel div p {
@@ -589,6 +588,10 @@ label {
 #error h2 span {
     font-family: 'Montserrat', sans-serif;
     color: var(--logo-emphasis);
+}
+
+#error h2, #error a {
+    margin-top: 30px;
 }
 
 /* Accessibility Styling */
@@ -757,10 +760,6 @@ a:active {
 /* Media Queries for contact.html */
 
 @media only screen and (max-width : 809px) {
-    #contact-form p {
-        margin-bottom: 40px;
-    }
-
     .main-form {
         flex-direction: column;
     }
